Update the errorprone plugin